[gd_scene load_steps=72 format=2]

[ext_resource path="res://addons/hierarchical_finite_state_machine/script/hfsm.gd" type="Script" id=1]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/nested_fsm_res.gd" type="Script" id=2]
[ext_resource path="res://addons/hierarchical_finite_state_machine/demo/godot_icon.png" type="Texture" id=3]
[ext_resource path="res://addons/hierarchical_finite_state_machine/demo/new_feature_work_with_animation/Player.gd" type="Script" id=4]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/subresource/state_res.gd" type="Script" id=5]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/subresource/variable_res.gd" type="Script" id=6]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/subresource/transition_res.gd" type="Script" id=7]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/subresource/transition_subresource/variable_condition_res.gd" type="Script" id=8]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/subresource/transition_subresource/auto_condition_res.gd" type="Script" id=9]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/subresource/transition_subresource/variable_expression_res.gd" type="Script" id=10]
[ext_resource path="res://addons/hierarchical_finite_state_machine/script/source/subresource/transition_subresource/expression_condition_res.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Resource" id=2]
script = ExtResource( 5 )
state_name = "idle"
state_type = 1
is_nested = false
editor_offset = Vector2( -80, 500 )
reset_properties_when_entry = true
reset_nested_fsm_when_entry = false
animation_name = "idle_alias"

[sub_resource type="Resource" id=3]
script = ExtResource( 5 )
state_name = "move"
state_type = 0
is_nested = false
editor_offset = Vector2( 880, 440 )
reset_properties_when_entry = true
reset_nested_fsm_when_entry = false
animation_name = ""

[sub_resource type="Resource" id=4]
script = ExtResource( 5 )
state_name = "jump"
state_type = 0
is_nested = false
editor_offset = Vector2( 40, 140 )
reset_properties_when_entry = true
reset_nested_fsm_when_entry = false
animation_name = ""

[sub_resource type="Resource" id=39]
script = ExtResource( 5 )
state_name = "floating"
state_type = 0
is_nested = false
editor_offset = Vector2( 460, 40 )
reset_properties_when_entry = true
reset_nested_fsm_when_entry = false
animation_name = ""

[sub_resource type="Resource" id=40]
script = ExtResource( 5 )
state_name = "land"
state_type = 0
is_nested = false
editor_offset = Vector2( 1000, 100 )
reset_properties_when_entry = true
reset_nested_fsm_when_entry = false
animation_name = ""

[sub_resource type="Resource" id=70]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=71]
script = ExtResource( 11 )
expression_text = ""
expression_comment = ""
expression_text = ""
expression_comment = ""

[sub_resource type="Resource" id=7]
script = ExtResource( 6 )
variable_name = "velocity_length"
variable_type = 3
variable_comment = ""
is_deleted = false

[sub_resource type="Resource" id=72]
script = ExtResource( 10 )
variable_res = SubResource( 7 )
trigger_mode = 0
comparation = 3
value = 5.0

[sub_resource type="Resource" id=73]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [ SubResource( 72 ) ]

[sub_resource type="Resource" id=74]
script = ExtResource( 7 )
from_res = SubResource( 2 )
to_res = SubResource( 3 )
transition_type = 1
auto_condition_res = SubResource( 70 )
expression_condition_res = SubResource( 71 )
variable_condition_res = SubResource( 73 )

[sub_resource type="Resource" id=103]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=104]
script = ExtResource( 11 )
expression_text = ""
expression_comment = ""
expression_text = ""
expression_comment = ""

[sub_resource type="Resource" id=106]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=107]
script = ExtResource( 7 )
from_res = SubResource( 4 )
to_res = SubResource( 39 )
transition_type = 0
auto_condition_res = SubResource( 103 )
expression_condition_res = SubResource( 104 )
variable_condition_res = SubResource( 106 )

[sub_resource type="Resource" id=119]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=120]
script = ExtResource( 11 )
expression_text = "Input.is_action_just_pressed(\"ui_accept\") and player.is_on_floor() "
expression_comment = ""
expression_text = "Input.is_action_just_pressed(\"ui_accept\") and player.is_on_floor() "
expression_comment = ""

[sub_resource type="Resource" id=122]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=123]
script = ExtResource( 7 )
from_res = SubResource( 40 )
to_res = SubResource( 4 )
transition_type = 2
auto_condition_res = SubResource( 119 )
expression_condition_res = SubResource( 120 )
variable_condition_res = SubResource( 122 )

[sub_resource type="Resource" id=129]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=130]
script = ExtResource( 11 )
expression_text = "not player.is_on_floor()"
expression_comment = ""
expression_text = "not player.is_on_floor()"
expression_comment = ""

[sub_resource type="Resource" id=132]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=133]
script = ExtResource( 7 )
from_res = SubResource( 3 )
to_res = SubResource( 39 )
transition_type = 2
auto_condition_res = SubResource( 129 )
expression_condition_res = SubResource( 130 )
variable_condition_res = SubResource( 132 )

[sub_resource type="Resource" id=139]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=140]
script = ExtResource( 11 )
expression_text = "Input.is_action_just_pressed(\"ui_accept\") and player.is_on_floor() "
expression_comment = ""
expression_text = "Input.is_action_just_pressed(\"ui_accept\") and player.is_on_floor() "
expression_comment = ""

[sub_resource type="Resource" id=142]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=143]
script = ExtResource( 7 )
from_res = SubResource( 3 )
to_res = SubResource( 4 )
transition_type = 2
auto_condition_res = SubResource( 139 )
expression_condition_res = SubResource( 140 )
variable_condition_res = SubResource( 142 )

[sub_resource type="Resource" id=144]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=145]
script = ExtResource( 11 )
expression_text = ""
expression_comment = ""
expression_text = ""
expression_comment = ""

[sub_resource type="Resource" id=147]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=148]
script = ExtResource( 7 )
from_res = SubResource( 40 )
to_res = SubResource( 2 )
transition_type = 0
auto_condition_res = SubResource( 144 )
expression_condition_res = SubResource( 145 )
variable_condition_res = SubResource( 147 )

[sub_resource type="Resource" id=149]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=150]
script = ExtResource( 11 )
expression_text = "Input.is_action_just_pressed(\"ui_accept\") and player.is_on_floor() "
expression_comment = ""
expression_text = "Input.is_action_just_pressed(\"ui_accept\") and player.is_on_floor() "
expression_comment = ""

[sub_resource type="Resource" id=152]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=153]
script = ExtResource( 7 )
from_res = SubResource( 2 )
to_res = SubResource( 4 )
transition_type = 2
auto_condition_res = SubResource( 149 )
expression_condition_res = SubResource( 150 )
variable_condition_res = SubResource( 152 )

[sub_resource type="Resource" id=154]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=155]
script = ExtResource( 11 )
expression_text = "player.is_on_floor()"
expression_comment = ""
expression_text = "player.is_on_floor()"
expression_comment = ""

[sub_resource type="Resource" id=157]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=158]
script = ExtResource( 7 )
from_res = SubResource( 39 )
to_res = SubResource( 40 )
transition_type = 2
auto_condition_res = SubResource( 154 )
expression_condition_res = SubResource( 155 )
variable_condition_res = SubResource( 157 )

[sub_resource type="Resource" id=159]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=160]
script = ExtResource( 11 )
expression_text = "not player.is_on_floor()"
expression_comment = ""
expression_text = "not player.is_on_floor()"
expression_comment = ""

[sub_resource type="Resource" id=162]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [  ]

[sub_resource type="Resource" id=163]
script = ExtResource( 7 )
from_res = SubResource( 2 )
to_res = SubResource( 39 )
transition_type = 2
auto_condition_res = SubResource( 159 )
expression_condition_res = SubResource( 160 )
variable_condition_res = SubResource( 162 )

[sub_resource type="Resource" id=164]
script = ExtResource( 9 )
auto_transit_mode = 0
delay_time = 1.0
times = 5

[sub_resource type="Resource" id=165]
script = ExtResource( 11 )
expression_text = ""
expression_comment = ""
expression_text = ""
expression_comment = ""

[sub_resource type="Resource" id=167]
script = ExtResource( 10 )
variable_res = SubResource( 7 )
trigger_mode = 0
comparation = 4
value = 5.0

[sub_resource type="Resource" id=168]
script = ExtResource( 8 )
variable_op_mode = 0
variable_expression_res_list = [ SubResource( 167 ) ]

[sub_resource type="Resource" id=169]
script = ExtResource( 7 )
from_res = SubResource( 3 )
to_res = SubResource( 2 )
transition_type = 1
auto_condition_res = SubResource( 164 )
expression_condition_res = SubResource( 165 )
variable_condition_res = SubResource( 168 )

[sub_resource type="Resource" id=28]
script = ExtResource( 2 )
fsm_name = "root"
state_res_list = [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 39 ), SubResource( 40 ) ]
transition_res_list = [ SubResource( 74 ), SubResource( 107 ), SubResource( 123 ), SubResource( 133 ), SubResource( 143 ), SubResource( 148 ), SubResource( 153 ), SubResource( 158 ), SubResource( 163 ), SubResource( 169 ) ]
is_nested = false
variable_res_list = [ SubResource( 7 ) ]
variable_list_offset = Vector2( -160, -40 )
editor_scroll_offset = Vector2( -16.0251, -54.958 )
transition_comment_visible = true
transition_editor_folded = false

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprite:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprite:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=34]
resource_name = "floating"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.004, 0.931 ), Vector2( 0.926, 1.032 ), Vector2( 1.004, 0.931 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "idle_alias"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.922, 1.044 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1.845 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=36]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1.938 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.092, 0.915 ), Vector2( 0.852, 1.14 ), Vector2( 0.91, 1.095 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "land"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.926, 1.032 ), Vector2( 1.055, 0.823 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5.028 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "move"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5.29 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 50.97, 26 )

[sub_resource type="QuadMesh" id=30]
size = Vector2( 1000, 50 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 5.09, 10 )

[sub_resource type="QuadMesh" id=32]
size = Vector2( 100, 20 )

[node name="Scene" type="Node2D"]
position = Vector2( 400.655, 346.478 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -269.376, 146.116 )
z_index = 1
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HFSM" type="Node" parent="Player"]
script = ExtResource( 1 )
active = true
process_type = 0
agents = {
"player": NodePath("..")
}
_custom_class_list = null
debug = null
_disable_rename_to_snake_case = false
_force_all_state_entry_behavior = 0
_force_all_fsm_entry_behavior = 0
_root_fsm_res = SubResource( 28 )
animation_player_node_path = NodePath("../AnimationPlayer")

[node name="StateLabel" type="Label" parent="Player"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -37.0418
margin_top = -50.0565
margin_right = 39.9582
margin_bottom = -36.0565
align = 1
valign = 1

[node name="VelocityLengthLabel" type="Label" parent="Player"]
margin_left = -62.0
margin_top = -75.0
margin_right = 52.0
margin_bottom = -61.0
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/RESET = SubResource( 33 )
anims/floating = SubResource( 34 )
anims/idle_alias = SubResource( 35 )
anims/jump = SubResource( 36 )
anims/land = SubResource( 37 )
anims/move = SubResource( 38 )

[node name="Static" type="Node" parent="."]

[node name="Floor" type="StaticBody2D" parent="Static"]
position = Vector2( 512.661, 574.637 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Floor"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Floor"]
modulate = Color( 0.752941, 0.752941, 0.752941, 1 )
mesh = SubResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ceiling" type="StaticBody2D" parent="Static"]
position = Vector2( 512.661, -26.8735 )
scale = Vector2( 1.031, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Ceiling"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Ceiling"]
mesh = SubResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftWall" type="StaticBody2D" parent="Static"]
position = Vector2( -29.7263, 279.155 )
rotation = 1.5708
scale = Vector2( 0.639, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/LeftWall"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightWall" type="StaticBody2D" parent="Static"]
position = Vector2( 1053.55, 279.155 )
rotation = 1.5708
scale = Vector2( 0.639, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/RightWall"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform1" type="StaticBody2D" parent="Static"]
position = Vector2( 344.854, 462.407 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Platform1"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Platform1"]
modulate = Color( 0.384314, 0.552941, 0.529412, 1 )
mesh = SubResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform2" type="StaticBody2D" parent="Static"]
position = Vector2( 527.992, 407.704 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Platform2"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Platform2"]
modulate = Color( 0.384314, 0.552941, 0.529412, 1 )
mesh = SubResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform3" type="StaticBody2D" parent="Static"]
position = Vector2( 718.265, 363.703 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Platform3"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Platform3"]
modulate = Color( 0.384314, 0.552941, 0.529412, 1 )
mesh = SubResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform4" type="StaticBody2D" parent="Static"]
position = Vector2( 904.971, 322.081 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Platform4"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Platform4"]
modulate = Color( 0.384314, 0.552941, 0.529412, 1 )
mesh = SubResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform5" type="StaticBody2D" parent="Static"]
position = Vector2( 711.13, 232.89 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Platform5"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Platform5"]
modulate = Color( 0.384314, 0.552941, 0.529412, 1 )
mesh = SubResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform6" type="StaticBody2D" parent="Static"]
position = Vector2( 398.369, 254.296 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Platform6"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Platform6"]
modulate = Color( 0.384314, 0.552941, 0.529412, 1 )
mesh = SubResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform7" type="StaticBody2D" parent="Static"]
position = Vector2( 202.15, 172.241 )
scale = Vector2( 1.036, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/Platform7"]
scale = Vector2( 9.83214, 1 )
shape = SubResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Static/Platform7"]
modulate = Color( 0.384314, 0.552941, 0.529412, 1 )
mesh = SubResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 6.0
margin_top = 14.0
margin_right = 413.0
margin_bottom = 84.0
rect_scale = Vector2( 2.5, 2.5 )
bbcode_enabled = true
bbcode_text = "      This demo is to demostrate the HFSM work with animation player, it means that  HFSM can conbine logic and animations .
Please chek the latest document ([color=blue]Document_cn.md or Document_en.md[/color] ) for more infomation."
text = "      This demo is to demostrate the HFSM work with animation player, it means that  HFSM can conbine logic and animations .
Please chek the latest document (Document_cn.md or Document_en.md ) for more infomation."

[connection signal="entered" from="Player/HFSM" to="Player" method="_on_HFSM_entered"]
[connection signal="physics_updated" from="Player/HFSM" to="Player" method="_on_HFSM_physics_updated"]
[connection signal="transited" from="Player/HFSM" to="Player" method="_on_HFSM_transited"]
[connection signal="updated" from="Player/HFSM" to="Player" method="_on_HFSM_updated"]
